@@ -4,6 +4,7 @@
 
 Version 1.4.20 - SVN
 --------------------
+  - Fix issue with search not using literals correctly (#2846511).
 
 Version 1.4.20 RC2 - 17 Aug 2009
 --------------------------------
